implemented initialize population, evaluateFitness, solution Found, reproduction and run via gluing all modules together